@@ -418,7 +418,7 @@ SEXP attribute_hidden do_drop(SEXP call, SEXP op, SEXP args, SEXP rho)
 	for (i = 0; i < n; i++)
 	    if (INTEGER(xdims)[i] == 1) shorten = 1;
 	if (shorten) {
-	    if (MAYBE_REFERENCED(x)) x = duplicate(x);
+	    if (MAYBE_REFERENCED(x)) x = R_duplicate_attr(x);
 	    x = DropDims(x);
 	}
     }
